[package]
name = "calculatrs"
version = "0.2.2"
authors = ["mark-i-m"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["arithmetic", "calculator"]
readme = "README.md"
repository = "https://github.com/mark-i-m/calculatrs"
description = """
A simple command-line calculator with python-like syntax for simple on-the-fly
calculations.
"""
categories = ["command-line-utilities"]

[[bin]]
bench = false
path = "src/main.rs"
name = "c"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.18.1"
regex = "1"
